--- a/Layer.ipynb
+++ b/Layer.ipynb
@@ -6,7 +6,7 @@
       "name": "Layer.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMxuq7s3HrPoLT1Hphda+cu",
+      "authorship_tag": "ABX9TyOHV1pKSS5SKPMIZIGw1Tj6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -393,6 +393,34 @@
           "output_type": "stream",
           "text": [
             "[[4.8, 1.21, 2.385], [8.9, -1.8099999999999996, 0.19999999999999996], [1.4100000000000001, 1.0509999999999997, 0.025999999999999912]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kXPPhcWIVcgJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "89eb0019-854c-45f0-dfcb-ccd29ef52fd7"
+      },
+      "source": [
+        "#Use np.array() to avoid floating point problem\n",
+        "print(np.array(output))"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 4.8    1.21   2.385]\n",
+            " [ 8.9   -1.81   0.2  ]\n",
+            " [ 1.41   1.051  0.026]]\n"
           ],
           "name": "stdout"
         }
