--- a/Layer.ipynb
+++ b/Layer.ipynb
@@ -6,7 +6,7 @@
       "name": "Layer.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOHV1pKSS5SKPMIZIGw1Tj6",
+      "authorship_tag": "ABX9TyM3DYtBcITZdIuFjZ9jxhzR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,11 +69,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "A5ruzxzcE_BF",
+        "colab_type": "text"
+      },
+      "source": [
+        "**This Notebook has 4 Parts:**\n",
+        "\n",
+        "1.   Making Layer from scratch\n",
+        "2.   Making Layer using Numpy\n",
+        "3.   Batch Processing From Scratch\n",
+        "2.   Batch processing Using Numpy Library\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "9wDYeN2gCOme",
         "colab_type": "text"
       },
       "source": [
-        "# From Scratch\n"
+        "# 1. Making Layer from scratch\n"
       ]
     },
     {
@@ -155,7 +175,7 @@
         "          inputs[0]*weights3[0] + inputs[1]*weights3[1] + inputs[2]*weights3[2] + inputs[3]*weights3[3] + bias3]    #Neuron 3\n",
         "print(output)                                                                                                       #Printing output"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +193,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Using Numpy Library"
+        "# 2. Making Layer using Numpy"
       ]
     },
     {
@@ -229,7 +249,7 @@
         "print(np.array(B).T.shape)                                      #Shape of Transpose of B\n",
         "print(np.dot(A,np.array(B).T))                                  #Dot Product of A and B'"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +300,7 @@
         "layer_outputs = np.dot(inputs, np.array(weights).T) + biases    #Dot Product of inputs and weights'\n",
         "print(layer_outputs)                                            #Printing Output"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +318,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Batch Processing From Scratch"
+        "# 3. Batch Processing From Scratch"
       ]
     },
     {
@@ -321,16 +341,16 @@
       "metadata": {
         "id": "9oOtROdtSpE1",
         "colab_type": "code",
+        "outputId": "e1a385a3-c042-43e7-a3ab-9c7fc2a88d83",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e1a385a3-c042-43e7-a3ab-9c7fc2a88d83"
+        }
       },
       "source": [
         "biases[0]"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,11 +387,11 @@
       "metadata": {
         "id": "1rqwC_E0SHNA",
         "colab_type": "code",
+        "outputId": "4ddd6604-3b90-4ba7-ce49-2fbb6ec13aad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4ddd6604-3b90-4ba7-ce49-2fbb6ec13aad"
+        }
       },
       "source": [
         "output = [[inputs[0][0]*weights1[0] + inputs[0][1]*weights1[1] + inputs[0][2]*weights1[2] + inputs[0][3]*weights1[3] + biases[0],    \n",
@@ -387,7 +407,7 @@
         "          inputs[2][0]*weights3[0] + inputs[2][1]*weights3[1] + inputs[2][2]*weights3[2] + inputs[2][3]*weights3[3] + biases[2]]]    \n",
         "print(output)                                                    #Printing output, long float output is floating point problem"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,17 +423,17 @@
       "metadata": {
         "id": "kXPPhcWIVcgJ",
         "colab_type": "code",
+        "outputId": "89eb0019-854c-45f0-dfcb-ccd29ef52fd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        },
-        "outputId": "89eb0019-854c-45f0-dfcb-ccd29ef52fd7"
+        }
       },
       "source": [
         "#Use np.array() to avoid floating point problem\n",
         "print(np.array(output))"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +453,17 @@
         "colab_type": "text"
       },
       "source": [
-        "# Batch processing Using Numpy Library"
+        "# 4. Batch processing Using Numpy Library"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fV-m_PWnFp73",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -492,7 +522,7 @@
         "layer_outputs = np.dot(inputs, np.array(weights).T) + biases    #Dot Product of inputs and weights'\n",
         "print(layer_outputs)                                            #Printing Output"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
