--- a/Layer.ipynb
+++ b/Layer.ipynb
@@ -6,7 +6,7 @@
       "name": "Layer.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM3DYtBcITZdIuFjZ9jxhzR",
+      "authorship_tag": "ABX9TyPXIxxmPa1D0ZorCmMv8T8U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,7 +240,7 @@
         "print(np.array(B))                 #This prints Matrix B\n",
         "print(np.array(B).shape)           #This prints the shape of Matrix B, which is (2,3)\n",
         "\n",
-        "#Dot product is possible When a=c in shape (axb).(cxd)\n",
+        "#Dot product is possible When b=c in shape (axb).(cxd)\n",
         "#Dot Product A.B is not possible since Dimensions are (2x2).(3x2)\n",
         "#To solve this problem we take transpose of B\n",
         "#Now Dot Product is possible since shape is (2x2)(2x3)        \n",
